--- a/app/globals.css
+++ b/app/globals.css
@@ -214,6 +214,14 @@
     .tag-tri {
         @apply before:content-[''] before:absolute before:top-2 before:left-2 before:border-t-[10px] before:border-t-black before:border-r-[10px] before:border-r-transparent after:content-[''] after:absolute after:bottom-2 after:right-2 after:border-b-[10px] after:border-b-black after:border-l-[10px] after:border-l-transparent;
     }
+
+    .ping {
+        @apply absolute inline-flex h-full w-full animate-ping rounded-full bg-primary opacity-75;
+    }
+
+    .ping-circle{
+        @apply relative inline-flex size-[11px] rounded-full bg-primary
+    }
 }
 
 .w-md-editor-toolbar {
