--- a/app/globals.css
+++ b/app/globals.css
@@ -52,8 +52,9 @@
     }
 
     .tag {
-        @apply bg-secondary px-6 py-3 font-work-sans font-bold rounded-sm uppercase relative tag-tri;
+        @apply bg-secondary px-6 py-3 font-work-sans font-bold rounded-sm uppercase relative tag-tri border-2 border-black;
     }
+    
 
     .heading {
         @apply uppercase bg-black px-6 py-3 font-work-sans font-extrabold text-white sm:text-[54px] sm:leading-[64px] text-[36px] leading-[46px] max-w-5xl text-center my-5;
@@ -133,7 +134,7 @@
 
     /* startupcard */
     .startup-card {
-        @apply bg-white border-[5px] border-black py-6 px-5 rounded-[22px] shadow-200 hover:border-primary transition-all duration-500 hover:shadow-300 hover:bg-primary-100;
+        @apply bg-white border-[5px] border-black py-6 px-5 rounded-[22px] hover:border-primary transition-all duration-500 hover:bg-primary-100;
     }
 
     .startup-card_date {
